--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,16 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './utils/variables';
+@import './utils/base';
+@import './common';
+@import './components/header';
+@import './components/hero';
+@import './components/products';
+@import './components/about';
+@import './components/advantages';
+@import './components/gallery';
+@import './components/customer-reviews';
+@import './components/contacts';
+@import './components/footer';
 @import './example';
