--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #ffffff;
-  font-family: 'Titan One', sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 h1,
@@ -26,6 +26,7 @@ ul {
 a {
   text-decoration: none;
   font-style: normal;
+  display: block;
 }
 
 img {
@@ -40,4 +41,7 @@ img {
   width: 1px;
   height: 1px;
   margin: -1px;
+  border: 0;
+  padding: 0;
+  overflow: hidden;
 }
