--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,26 +5,36 @@
 // Основной цвет заголовка #d41443
 // Вторичный цвет заголовка #fff
 
-// Основной цвет текста кнопки #d41443
-// Вторичный цвет текста кнопки #fff
 // Основной цвет фона кнопки #fff
+// Основной цвет текста кнопки #d41443
 // Вторичный цвет фона кнопки #d41443
-// Цвет фона кнопки в фокусе #ecebeb
+// Вторичный цвет текста кнопки #fff
+
+// Цвет фона кнопки в фокусе #ECEBEB
 // Цвет текста кнопки в фокусе #d41443
+// Вторичный цвет фона кнопки в фокусе #D41342
+// Вторичный цвет текста кнопки в фокусе #FFF
 
 // Цвет пункта моб. меню #fff
 // Цвет пункта моб. меню в фокусе #d41443
 
+// Цвет иконки контактов #FEA5BB
+// Цвет иконки контактов в фокусе #D41443
+
 // Цвет фона мобильного меню #E17992
 
 // Цвета фона карточек продуктов #FFB8CA   #f0d1a5   #c2e297
+
+// Цвет точек слайдера под отзывом #D9D9D9
 :root {
   --brand-color: #ffb8ca;
   --light-brand-color: #fff5f6;
   --dark-brand-color: #ffa5ba;
   --accent-color: #d41443;
 
-  --main-background-color: #fff;
+  --main-bgc: #fff;
+  --light-section-bgc: #fff5f6;
+  --dark-section-bgc: #e5e5e5;
 
   --main-text-color: #000;
   --secondary-text-color: #907e82;
@@ -32,9 +42,14 @@
   --products-second-card-color: #f0d1a5;
   --products-third-card-color: #c2e297;
 
-  --button-focuse-background-color: #ecebeb;
+  --light-button-bgc: #ecebeb;
+  --hover-button-bgc: #c7133e;
 
-  --mobile-menu-background-color: #e17992;
+  --mobile-menu-bgc: #e17992;
+
+  --slider-item-color: #d9d9d9;
+
+  --contacts-icon-bgc: #fea5bb;
 
   --button-border-radius: 22px;
   --card-border-radius: 24px;
