Цвет для section__title

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -24,7 +24,7 @@
 }}
 
 .section__title {
- 
+ color: var(--accent-color);
  font-family: "Titan One", sans-serif;
 font-size: 34px;
  line-height: 1.15;
