--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="section section__contacts">
-  <h2 class="section__title is-hidden">Our contacts</h2>
+  <h2 class="section__title--is-hidden">Our contacts</h2>
   <div class="container">
     <ul class="contacts">
       <li class="contacts__item">
