--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,19 +1,15 @@
 <!-- About (how it’s made?)
-
 tradition and love - является лейблом заголовка и не выделяется тегом заголовка.
 how it’s made? - является заголовком секции.
-
-
-В секции представлен блок с параграфами и кнопкой “Read more”. Кнопка должна открывать модальное окно с полным описанием. Так как дизайна модального окна нет, это является дополнительным заданием.
-
+В секции представлен блок с параграфами и кнопкой “Read more”. Кнопка должна открывать модальное окно с полным описанием.
+Так как дизайна модального окна нет, это является дополнительным заданием.
 Декоративное изображение с коровой, сохранить в png формате, чтобы сохранить прозрачность изображения.
-
 Фоновое изображение молока должно занимать всю ширину секции и находится по краям экрана. -->
 
-<section class="section">
+<section class="section about__section">
   <div class="container">
     <p>tradition and love</p>
-    <h2>how it’s made?</h2>
+    <h2 class="section__title about__title">how it’s made?</h2>
     <div class="about">
       <picture>
         <source
