--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import './utils/variables';
 @import './utils/base';
 @import './common';
+@import './components/button';
 @import './components/header';
 @import './components/hero';
 @import './components/products';
@@ -16,4 +17,3 @@
 @import './components/customer-reviews';
 @import './components/contacts';
 @import './components/footer';
-
