--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="section section__contacts">
+<section class="section contacts__section">
   <h2 class="section__title--is-hidden">Our contacts</h2>
   <div class="container">
     <ul class="contacts">
@@ -6,7 +6,7 @@
         <p class="contacts__description">CAFE</p>
         <p class="contacts__city">Chicago</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        <ul class="contacts__operation-mode">
+        <ul class="contacts__worktime">
           <li class="conntacts__days">
             <p>Monday - Friday</p>
             <p>06:00 AM - 10:00 PM</p>
@@ -23,7 +23,7 @@
         <p class="contacts__description">FOOD TRUCK</p>
         <p class="contacts__city">Los Angeles</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        <ul class="contacts__operation-mode">
+        <ul class="contacts__worktime">
           <li class="conntacts__days">
             <p>Monday - Friday</p>
             <p>06:00 AM - 10:00 PM</p>
@@ -40,7 +40,7 @@
         <p class="contacts__description">CAFE</p>
         <p class="contacts__city">New York</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        <ul class="contacts__operation-mode">
+        <ul class="contacts__worktime">
           <li class="conntacts__days">
             <p>Monday - Friday</p>
             <p>06:00 AM - 10:00 PM</p>
