--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -7,60 +7,60 @@
         <p class="contacts__city">Chicago</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         <ul class="contacts__worktime">
-          <li class="conntacts__days">
-            <p>Monday - Friday</p>
-            <p>06:00 AM - 10:00 PM</p>
+          <li class="conntacts__workdays">
+            <p class="contacts__day">Monday - Friday</p>
+            <p class="contacts__time">06:00 AM - 10:00 PM</p>
           </li>
-          <li class="conntacts__days">
-            <p>Saturday - Sunday</p>
-            <p>08:00 AM - 16:00 PM</p>
+          <li class="contacts__weekend">
+            <p class="contacts__day">Saturday - Sunday</p>
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <a href="tel:+61(0)383766284">+61(0) 383 766 284</a>
-        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+        <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
+        <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
       </li>
       <li class="contacts__item">
         <p class="contacts__description">FOOD TRUCK</p>
         <p class="contacts__city">Los Angeles</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         <ul class="contacts__worktime">
-          <li class="conntacts__days">
-            <p>Monday - Friday</p>
-            <p>06:00 AM - 10:00 PM</p>
+          <li class="conntacts__workdays">
+            <p class="contacts__day">Monday - Friday</p>
+            <p class="contacts__time">06:00 AM - 10:00 PM</p>
           </li>
-          <li class="conntacts__days">
-            <p>Saturday - Sunday</p>
-            <p>08:00 AM - 16:00 PM</p>
+          <li class="contacts__weekend">
+            <p class="contacts__day">Saturday - Sunday</p>
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <a href="tel:+61(0)383766284">+61(0) 383 766 284</a>
-        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+        <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
+        <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
       </li>
       <li class="contacts__item">
         <p class="contacts__description">CAFE</p>
         <p class="contacts__city">New York</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         <ul class="contacts__worktime">
-          <li class="conntacts__days">
-            <p>Monday - Friday</p>
-            <p>06:00 AM - 10:00 PM</p>
+          <li class="conntacts__workdays">
+            <p class="contacts__day">Monday - Friday</p>
+            <p class="contacts__time">06:00 AM - 10:00 PM</p>
           </li>
-          <li class="conntacts__days">
-            <p>Saturday - Sunday</p>
-            <p>08:00 AM - 16:00 PM</p>
+          <li class="contacts__weekend">
+            <p class="contacts__day">Saturday - Sunday</p>
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <a href="tel:+61(0)383766284">+61(0) 383 766 284</a>
-        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+        <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
+        <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
       </li>
     </ul>
 
     <ul class="contacts-button">
       <li class="contacts-button__item">
-        <button type="button" class="button contacts__button">Our Locations</button>
+        <button type="button" class="button button--pink contacts__button">Our Locations</button>
       </li>
       <li class="contacts-button__item">
-        <button type="button" class="button contacts__button">Franchise</button>
+        <button type="button" class="button button--white contacts__button">Franchise</button>
       </li>
     </ul>
   </div>
