--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -39,7 +39,7 @@ how it’s made? - является заголовком секции.
         in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna
         maximus. Cras massa nibh, tincidunt. Aliquam erat volutpat. Aenean accumsan.
       </p>
-      <button type="button">Read more</button>
+      <button type="button" class="button button--white">Read more</button>
     </div>
   </div>
 </section>
