--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -33,7 +33,7 @@
             <p class="contacts__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
+        <a href="tel:+610383766284" class="contacts__link">+61(0) 383 766 284</a>
         <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
       </li>
       <li class="contacts__item">
