--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,14 +6,14 @@
         <p class="contacts__description">CAFE</p>
         <p class="contacts__city">Chicago</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        <ul class="contacts__worktime">
-          <li class="conntacts__workdays">
-            <p class="contacts__day">Monday - Friday</p>
-            <p class="contacts__time">06:00 AM - 10:00 PM</p>
+        <ul class="worktime">
+          <li class="worktime__workdays">
+            <p class="worktime__day">Monday - Friday</p>
+            <p class="worktime__time">06:00 AM - 10:00 PM</p>
           </li>
           <li class="contacts__weekend">
-            <p class="contacts__day">Saturday - Sunday</p>
-            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+            <p class="worktime__day">Saturday - Sunday</p>
+            <p class="worktime__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
         <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
@@ -23,14 +23,14 @@
         <p class="contacts__description">FOOD TRUCK</p>
         <p class="contacts__city">Los Angeles</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        <ul class="contacts__worktime">
-          <li class="conntacts__workdays">
-            <p class="contacts__day">Monday - Friday</p>
-            <p class="contacts__time">06:00 AM - 10:00 PM</p>
+        <ul class="worktime">
+          <li class="worktime__workdays">
+            <p class="worktime__day">Monday - Friday</p>
+            <p class="worktime__time">06:00 AM - 10:00 PM</p>
           </li>
           <li class="contacts__weekend">
-            <p class="contacts__day">Saturday - Sunday</p>
-            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+            <p class="worktime__day">Saturday - Sunday</p>
+            <p class="worktime__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
         <a href="tel:+610383766284" class="contacts__link">+61(0) 383 766 284</a>
@@ -40,14 +40,14 @@
         <p class="contacts__description">CAFE</p>
         <p class="contacts__city">New York</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        <ul class="contacts__worktime">
-          <li class="conntacts__workdays">
-            <p class="contacts__day">Monday - Friday</p>
-            <p class="contacts__time">06:00 AM - 10:00 PM</p>
+        <ul class="worktime">
+          <li class="worktime__workdays">
+            <p class="worktime__day">Monday - Friday</p>
+            <p class="worktime__time">06:00 AM - 10:00 PM</p>
           </li>
           <li class="contacts__weekend">
-            <p class="contacts__day">Saturday - Sunday</p>
-            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+            <p class="worktime__day">Saturday - Sunday</p>
+            <p class="worktime__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
         <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
