--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -1,3 +1,6 @@
+.advantages__item {
+  margin-top: 38px;
+}
 .advantages__index {
   font-family: Titan One;
   font-size: 36px;
@@ -6,6 +9,17 @@
   text-transform: uppercase;
 
   color: var(--accent-color);
+  margin-top: 16px;
+  margin-bottom: 18px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 36px;
+    margin-bottom: 15px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-top: 40px;
+    margin-bottom: 15px;
+  }
 }
 .advantages__text {
   font-size: 12px;
