--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,7 +8,7 @@ how it’s made? - является заголовком секции.
 
 <section class="section about__section">
   <div class="container">
-    <p>tradition and love</p>
+    <p class="section__label">tradition and love</p>
     <h2 class="section__title about__title">how it’s made?</h2>
     <div class="about">
       <picture>
