--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,12 @@
-<!-- Header В шапке находится лого, меню навигации и кнопка. На мобильной и планшетной версии меню
-навигации отображается, как выезжающая боковая панель. Мобильное меню фиксированное, высота
-соответствует высоте вьюпорта. Меню реализовано якорными ссылками, которые ведут на соответствующие
-разделы макета. Кнопка “Buy now” открывает модальное окно с формой заказа. Так как дизайна
-модального окна нет на макете, это является не обязательным заданием. -->
+<!-- Header В шапке находится лого, меню навигации и кнопка. 
+ На мобильной и планшетной версии меню навигации отображается,
+     как выезжающая боковая панель. 
+ Мобильное меню фиксированное, высота соответствует высоте вьюпорта.
+ Меню реализовано якорными ссылками, которые ведут на соответствующие
+     разделы макета. 
+ Кнопка “Buy now” открывает модальное окно с формой заказа.
+ Так как дизайна модального окна нет на макете, это является
+     не обязательным заданием. -->
 
 <!-- header -->
 <!-- хедер должен быть составной частью секции hero-header,
@@ -10,17 +14,17 @@
 для того чтобы было видно фоновое изображение от hero  -->
 <header class="header">
   <div class="header__container">
-    <div class="logo">
+    <span class="logo">
       <img
         class="logo__image"
         srcset="./images/Header/ice-cream/logo.png 1x, ./images/Header/ice-cream/logo@2x.png 2x"
         src="./images/Header/ice-cream/logo.png"
-        alt="Мороженое рожок"
+        alt="ice cream cone"
       />
       icecream
-    </div>
+    </span>
 
-    <button type="button" class="mobile-menu__button">
+    <button type="button" class="mobile-menu__switch">
       <svg
         class="mobile-menu__svg"
         width="20"
@@ -40,27 +44,32 @@
   </div>
 </header>
 
-<div class="menu" id="menu-container">
-  <!-- ====навигация сайта =========== -->
-  <nav class="site-nav">
-    <ul class="site-nav__list">
-      <li class="site-nav__item">
-        <a href="#" class="site-nav__link current">Home </a>
-      </li>
-      <li class="site-nav__item">
-        <a href="#" class="site-nav__link">About us </a>
-      </li>
-      <li class="site-nav__item">
-        <a href="#" class="site-nav__link">How it’s made? </a>
-      </li>
-      <li class="site-nav__item">
-        <a href="#" class="site-nav__link">Our products </a>
-      </li>
-      <li class="site-nav__item">
-        <a href="#" class="site-nav__link">Contact </a>
-      </li>
-    </ul>
-  </nav>
-  <!-- ..... ====навигация сайта end======= ... -->
+<div class="mobile-menu" id="menu-container">
+  <div class="mobile-menu__box">
+    <button type="button" class="button button--white mobile-menu__button">
+      <span class="button__buy">Buy now </span>
+    </button>
+    <!-- ====навигация сайта =========== -->
+    <nav class="site-nav">
+      <ul class="site-nav__list">
+        <li class="site-nav__item">
+          <a href="#" class="site-nav__link site-nav__link--current">Home </a>
+        </li>
+        <li class="site-nav__item">
+          <a href="#" class="site-nav__link">About us </a>
+        </li>
+        <li class="site-nav__item">
+          <a href="#" class="site-nav__link">How it’s made? </a>
+        </li>
+        <li class="site-nav__item">
+          <a href="#" class="site-nav__link">Our products </a>
+        </li>
+        <li class="site-nav__item">
+          <a href="#" class="site-nav__link">Contact </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- ..... ====навигация сайта end======= ... -->
+  </div>
 </div>
 <!-- ======================================= -->
