--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,42 +1,9 @@
-:root {
-  //   --brand-color: #ffb8ca;
-  //   --light-brand-color: #fff5f6;
-  //   --dark-brand-color: #ffa5ba;
-  //   --accent-color: #d41443;
-
-  //   --main-bgc: #fff;
-  //   --light-section-bgc: #fff5f6;
-  //   --dark-section-bgc: #e5e5e5;
-
-  //   --main-text-color: #000;
-  //   --secondary-text-color: #907e82;
-
-  //   --products-second-card-color: #f0d1a5;
-  //   --products-third-card-color: #c2e297;
-
-  //   --light-button-bgc: #ecebeb;
-  //   --hover-button-bgc: #c7133e;
-
-  --mobile-menu-bgc: #e17992;
-
-  //   --slider-item-color: #d9d9d9;
-
-  //   --contacts-icon-bgc: #fea5bb;
-
-  //   --button-border-radius: 22px;
-  //   --card-border-radius: 24px;
-}
-
 .header {
-  // background-color: var(--mobile-menu-bgc);
   background-color: transparent;
 }
 
 .header__container {
   display: flex;
-
-  padding-right: 20px;
-  padding-left: 20px;
 }
 
 .logo {
@@ -44,8 +11,6 @@
   align-items: center;
 
   font-family: 'Titan One', sans-serif;
-  font-style: normal;
-  font-weight: normal;
   font-size: 25px;
   line-height: 1.16;
   text-transform: uppercase;
@@ -54,19 +19,46 @@
 .logo__image {
   margin-right: 18px;
 }
-.mobile-menu__button {
+.mobile-menu {
+  background-color: var(--mobile-menu-bgc);
+}
+
+.mobile-menu__box {
+  padding: 40px 20px;
+
+  @media screen and (min-width: $mobile) {
+    width: $mobile;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: $tablet;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: $desktop;
+  }
+}
+.mobile-menu__switch {
   margin-left: auto;
   padding: 0;
   background-color: transparent;
   border: transparent 1px solid;
 }
+.mobile-menu__button {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
 
-// .button__icon-arrow-right2 {
-//   margin-left: 10px;
-//   width: 24px;
-//   height: 24px;
-//   // background-image: url(../../images/);
-// }
+  @media screen and (min-width: $mobile) {
+    width: 209px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 186px;
+  }
+}
 
 .site-nav__list {
   &:first-child {
@@ -78,49 +70,16 @@
   // outline: green solid 1px;
 }
 .site-nav__link {
-  padding: 12px 0 12px 21px;
-
-  background-color: var(--mobile-menu-bgc);
+  padding: 12px;
+  //   background-color: var(--mobile-menu-bgc);
 
   color: var(--main-bgc);
-  font-family: DM Sans;
 
   font-weight: 700;
   font-size: 14px;
   line-height: 1.3;
-}
-// ====================
-
-.button {
-  height: 44px;
-  min-width: 64px;
-  border: none;
-  border-radius: var(--button-border-radius);
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.29;
-  padding: 0 20px;
-  transition: color 250ms linear;
-  transition: background-color 250ms linear;
-}
-
-.button--pink {
-  color: var(--main-bgc);
-  background-color: var(--accent-color);
-
-  &:hover,
-  &:focus {
-    background-color: var(--hover-button-bgc);
+  &--current {
+    color: var(--accent-color);
   }
 }
-
-.button--white {
-  color: var(--accent-color);
-  background-color: var(--main-bgc);
-
-  &:hover,
-  &:focus {
-    background-color: var(--light-button-bgc);
-  }
-}
+// --accent-color: #d41443;====================
