--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,36 +1,44 @@
 <footer class="footer">
-  <div class="container footer_container">
-    <div class="footer_title-block">
-      <p class="container_text">homemade ice cream made</p>
-      <p class="container_title">with passion</p>
+  <div class="container footer__container">
+    <div class="footer__title-block">
+      <p>homemade ice cream made</p>
+      <p class="section__title footer__title">with passion</p>
     </div>
-    <div class="footer_social-block">
-      <ul class="footer_item">
-        <li class="footer_list">
-          <svg class="footer_svg">
-            <use href="../src/images/symbol-defs.svg#icon-github"></use>
-          </svg>
+    <div class="footer__social-block">
+      <ul class="social">
+        <li class="social__list">
+          <a href="https://github.com" class="social__link" aria-label="github">
+            <svg class="social__svg">
+              <use href="../src/images/symbol-defs.svg#icon-github"></use>
+            </svg>
+          </a>
         </li>
-        <li class="footer_list">
-          <svg class="footer_svg">
-            <use href="../src/images/symbol-defs.svg#icon-telegram"></use>
-          </svg>
+        <li class="social__list">
+          <a href="https://telegram.org" class="social__link" aria-label="telegram">
+            <svg class="social__svg">
+              <use href="../src/images/symbol-defs.svg#icon-telegram"></use>
+            </svg>
+          </a>
         </li>
-        <li class="footer_list">
-          <svg class="footer_svg">
-            <use href="../src/images/symbol-defs.svg#icon-facebook"></use>
-          </svg>
+        <li class="social__list">
+          <a href="https://www.facebook.com" class="social__link" aria-label="facebook">
+            <svg class="social__svg">
+              <use href="../src/images/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
         </li>
       </ul>
       <address class="address">
-        <span class="address_text"
+        <span class="address__text"
           >Feel free to contact
-          <a class="address_link" href="#">+61 (0) 383 766 284</a>
+          <a class="address__link" href="tel:+610383766284" aria-label="telephone.+610383766284"
+            >+61 (0) 383 766 284</a
+          >
         </span>
       </address>
     </div>
   </div>
-  <div class="footer_block">
-    <span class="footer_text">© 2019 - IceCream. All Rights Reserved.</span>
+  <div class="footer__block">
+    <span class="footer__text">© 2019 - IceCream. All Rights Reserved.</span>
   </div>
 </footer>
