--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,207 +1,130 @@
-p {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.footer_title-block {
-  @media screen and (max-width: 767px) {
+.footer__title-block {
+  @media screen and (max-width: $mobile-only) {
     max-width: 260px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     width: 340px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     width: auto;
   }
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  @media screen and (max-width: 767px) {
-    max-width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    width: 768px;
-    padding-left: 36px;
-    padding-right: 36px;
-  }
-  @media screen and (min-width: 1280px) {
-    width: 1280px;
-    padding-left: 115px;
-    padding-right: 115px;
-  }
-}
-
 .footer {
-  padding-top: 25px;
   padding-bottom: 25px;
 
-  background-color: #fff5f6;
+  background-color: var(--light-brand-color);
 }
 
-.footer_container {
-  @media screen and (min-width: 768px) {
+.footer__container {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 120px;
 
     display: flex;
     align-items: baseline;
     justify-content: space-between;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     margin-bottom: 106px;
   }
 }
 
-.container_text {
-  margin-bottom: 17px;
-
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
-  text-transform: uppercase;
-
-  color: #ffa5ba;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 16px;
-
-    font-size: 26px;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-  }
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 15px;
-
-    font-size: 30px;
-    line-height: 34px;
-  }
-}
-
-.container_title {
+.footer__title {
   margin-bottom: 43px;
 
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 34px;
-  line-height: 39px;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-
-  color: #d41443;
-
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 0;
 
-    font-size: 48px;
-    line-height: 55px;
     letter-spacing: 0.06em;
-  }
-  @media screen and (min-width: 1280px) {
-    font-size: 58px;
-    line-height: 66px;
   }
 }
 
-.footer_item {
+.social {
   display: flex;
   justify-content: end;
   margin-bottom: 46px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 50px;
   }
 }
 
-.footer_list {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  background-color: #fea5bb;
+.social__list {
   &:not(:last-child) {
     margin-right: 28px;
   }
 }
 
-.footer_svg {
+.social__link {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+
+  background-color: var(--contacts-icon-bgc);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+}
+
+.social__svg {
   width: 18px;
   height: 18px;
 
   fill: #fff;
 }
 
-.address_text {
+.address__text {
   display: inherit;
   margin-bottom: 65px;
 
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 186%;
-  /* or 22px */
+  @include text(700, 12px, 1.86, 0, var(--main-text-color));
 
+  font-style: normal;
   text-align: right;
-  color: #000000;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 0;
 
     font-size: 14px;
-    line-height: 186%;
+    line-height: 1.86;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
-    line-height: 186%;
+    line-height: 1.86;
   }
 }
 
-.address_link {
+.address__link {
+  display: inline;
   text-decoration: none;
-  color: #d41443;
+  color: var(--accent-color);
 }
 
-.footer_text {
+.footer__text {
   display: inline-block;
 
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 152%;
-
+  @include text(700, 14px, 1.52, 0, var(--secondary-text-color));
   text-align: center;
 
-  color: #907e82;
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $mobile-only) {
     max-width: 140px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     font-size: 14px;
-    line-height: 186%;
+    line-height: 1.86;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
-    line-height: 186%;
+    line-height: 1.86;
 
     letter-spacing: 0.02em;
   }
 }
 
-.footer_block {
+.footer__block {
   position: relative;
   text-align: center;
   &::after {
