--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container footer__container">
     <div class="footer__title-block">
-      <p>homemade ice cream made</p>
+      <p class="section__label footer__label">homemade ice cream made</p>
       <p class="section__title footer__title">with passion</p>
     </div>
     <div class="footer__social-block">
