--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -29,7 +29,12 @@
   }
 }
 
+.footer__label {
+  text-align: start;
+}
+
 .footer__title {
+  text-align: start;
   margin-bottom: 43px;
 
   @media screen and (min-width: $tablet) {
