Позиционирование для desktop
1. Ретина для фона.
2. Фон для desktop.
3. Отступы.
4. Оформление текста.
5.  letter-spacing: 0.04em; для body

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,13 +1,41 @@
 .about__section {
      background-color: var(--light-section-bgc);
+      background-image: url('../images/About/about-background-mobile.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: 50% 90%;
+
     
       @media screen and (max-width: $mobile-only) {
-        background-image: url('../images/About/about-background-mobile.png');
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-position: 50% 90%;
-
+       
       }
+@media screen and (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+  background-image: url('../images/About/about-background-mobile@2x.png');
+}
+
+@media screen and (min-width: 481px) {
+  background-image: url('../images/About/about-background-desktop.png');
+
+  @media screen and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    background-image: url('../images/About/about-background-desktop@2x.png');
+    }
+}
+
+@media screen and (min-width: 769px) {
+  background-image:
+    url('../images/About/about-background-desktop.png');
+
+  @media screen and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    background-image: 
+      url('../images/About/about-background-desktop@2x.png');
+  }
+}
 
 
  }
@@ -23,8 +51,11 @@
 
      @media screen and (min-width: $tablet) {
              margin-bottom: 50px;
+}
+ @media screen and (min-width: $desktop) {
+   margin-bottom: 55px;
 
-     }
+ }
 }
 
 .about__img {
@@ -34,15 +65,24 @@
      }
 
      @media screen and (min-width: $tablet) {
-    //    width: calc((100% - 37px) / 2);
-       margin-right: 20px;
+    //    width: calc((100% - 20px) / 2);
+       margin-right: 17px;
+     }
+
+     @media screen and (min-width: $desktop) {
+      margin-right: 74px;
      }
 }
 
 .text-box {
    @media screen and (min-width: $tablet){
-         width: calc((100% - 20px) / 2);
+         width: calc((100% - 17px) / 2);
      }
+
+      @media screen and (min-width: $desktop) {
+        width: calc((100% - 74px) / 2);
+      }
+
 
       
 }
@@ -52,14 +92,38 @@
     line-height: 1.6;
     color: var(--main-text-color);
 
+     @media screen and (min-width: $tablet) {
+      font-size: 14px;
+      line-height: 1.7;
+
+     }
+
+  @media screen and (min-width: $desktop){
+    font-size: 16px;
+  
+
+  }
+
     &--light {
         color: var(--secondary-text-color);
-        
+
+          @media screen and (min-width: $desktop) {
+            font-size: 14px;
+            line-height: 1.7;
+          }
+ 
+        @media screen and (min-width: $desktop){
+       line-height: 1.9;
+      }
          
     }
 
     &:not(:last-child) {
         margin-bottom: 20px;
+
+        @media screen and (min-width: $desktop){
+             margin-bottom: 35px;
+        }
     }
 }
 
@@ -67,5 +131,9 @@
      @media screen and (min-width: $tablet) {
          margin-top: 40px;
      }
+
+      @media screen and (min-width: $desktop) {
+        margin-top: 10px;
+      }
 
 }
