pull changes from dev

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,5 @@
 <section class="section">
-    <div class="container container__advantages">
+    <div class="container">
         <h2 class="section__title section__title--is-hidden">Our advantages</h2>
         <ul class="advantages__list">
             <li class="advantages__item">
