--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,33 +1,39 @@
-<section class="section reviews__section">
-  <div class="container">
+<section class="section reviews">
+  <div class="container reviews__container">
     <h2 class="section__title--is-hidden">Customer Reviews</h2>
     <div class="slider">
       <div class="slider__item">
-        <img src="../src/images/Customer Reviews/Customer1.png" alt="customer foto" />
-        <p class="reviews__description">
+        <img
+          src="../src/images/сustomer-reviews/customer1.png"
+          alt="customer foto"
+          class="slider__foto"
+        />
+        <div class="slider__thumb">
+          <p class="slider__description">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+          </p>
+        </div>
+        <p class="slider__name">Emily, Los Angeles</p>
+      </div>
+
+      <!-- <div class="slider__item">
+        <img src="../src/images/сustomer-reviews/customer2.png" alt="customer foto" class="slider__foto"/>
+        <p class="slider__description">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
         </p>
-        <p class="reviews__name">Emily, Los Angeles</p>
+        <p class="slider__name">Emily, Los Angeles</p>
       </div>
 
       <div class="slider__item">
-        <img src="../src/images/Customer Reviews/Customer2.png" alt="customer foto" />
-        <p class="reviews__description">
+        <img src="../src/images/сustomer-reviews/customer3.png" alt="customer foto" class="slider__foto"/>
+        <p class="slider__description">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
         </p>
-        <p class="reviews__name">Emily, Los Angeles</p>
-      </div>
-
-      <div class="slider__item">
-        <img src="../src/images/Customer Reviews/Customer3.png" alt="customer foto" />
-        <p class="reviews__description">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-        </p>
-        <p class="reviews__name">Emily, Los Angeles</p>
-      </div>
+        <p class="slider__name">Emily, Los Angeles</p>
+      </div> -->
     </div>
   </div>
 </section>
