--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,7 @@
 <section class="section">
-    <div class="container">
+    <div class="container container__advantages">
         <h2 class="section__title section__title--is-hidden">Our advantages</h2>
-        <ul class="advantages__list">
+        <ul class="advantages">
             <li class="advantages__item">
                 <span class="advantages__index">721</span>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
