--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -1,16 +1,28 @@
-.advantages__list {
+.container__advantages {
+  margin-top: 39px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 66px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-top: -25px;
+  }
+}
+.advantages {
   @media screen and (min-width: 768px) {
     display: flex;
   }
 }
 .advantages__item {
-  &:not(:first-child) {
-    margin-top: 38px;
+  @media screen and (max-width: 767px) {
+    &:not(:first-child) {
+      margin-top: 38px;
+    }
   }
 
   @media screen and (min-width: 768px) {
     width: calc((100% - 2 * 60px) / 3);
-    margin-top: 38px;
+
     &:not(:first-child) {
       margin-left: 60px;
     }
