--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -15,7 +15,7 @@
     left: 40px;
     width: 54px;
     height: 40px;
-    z-index: -1;
+    z-index: 1;
     background-image: url('../images/сustomer-reviews/quote.svg');
   }
 }
@@ -33,6 +33,8 @@
 }
 
 .slider__description {
+  position: relative;
+  z-index: 999;
   width: 100%;
   padding-bottom: 4px;
   background-position: 0px -4px;
