--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,25 +5,30 @@
       <p class="section__title footer__title">with passion</p>
     </div>
     <div class="footer__social-block">
-      <ul class="social">
+      <ul class="social social--margin-bottom">
         <li class="social__list">
           <a href="https://github.com" class="social__link" aria-label="github">
             <svg class="social__svg">
-              <use href="../src/images/symbol-defs.svg#icon-github"></use>
+              <use href="./images/symbol-defs.svg#icon-github"></use>
             </svg>
           </a>
         </li>
         <li class="social__list">
-          <a href="https://telegram.org" class="social__link" aria-label="telegram">
+          <a href="https://telegram.org" class="social__link" aria-label="telegram" target="_blank">
             <svg class="social__svg">
-              <use href="../src/images/symbol-defs.svg#icon-telegram"></use>
+              <use href="./images/symbol-defs.svg#icon-telegram"></use>
             </svg>
           </a>
         </li>
         <li class="social__list">
-          <a href="https://www.facebook.com" class="social__link" aria-label="facebook">
+          <a
+            href="https://www.facebook.com"
+            class="social__link"
+            aria-label="facebook"
+            target="_blank"
+          >
             <svg class="social__svg">
-              <use href="../src/images/symbol-defs.svg#icon-facebook"></use>
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -31,7 +36,11 @@
       <address class="address">
         <span class="address__text"
           >Feel free to contact
-          <a class="address__link" href="tel:+610383766284" aria-label="telephone.+610383766284"
+          <a
+            class="address__link"
+            href="tel:+610383766284"
+            aria-label="telephone.+610383766284"
+            target="_blank"
             >+61 (0) 383 766 284</a
           >
         </span>
