--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,9 +1,13 @@
 <section class="section reviews">
   <div class="container reviews__container">
-    <h2 class="section__title--is-hidden">Customer Reviews</h2>
+    <h2 class="section__title section__title--is-hidden">Customer Reviews</h2>
     <div class="slider">
       <div class="slider__item">
         <img
+          srcset="
+            ../src/images/сustomer-reviews/customer1.png    1x,
+            ../src/images/сustomer-reviews/customer1@2x.png 2x
+          "
           src="../src/images/сustomer-reviews/customer1.png"
           alt="customer foto"
           class="slider__foto"
@@ -18,7 +22,11 @@
       </div>
 
       <!-- <div class="slider__item">
-        <img src="../src/images/сustomer-reviews/customer2.png" alt="customer foto" class="slider__foto"/>
+        <img 
+        srcset="
+            ../src/images/сustomer-reviews/customer2.png    1x,
+            ../src/images/сustomer-reviews/customer2@2x.png 2x"
+        src="../src/images/сustomer-reviews/customer2.png" alt="customer foto" class="slider__foto"/>
         <p class="slider__description">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
@@ -27,7 +35,11 @@
       </div>
 
       <div class="slider__item">
-        <img src="../src/images/сustomer-reviews/customer3.png" alt="customer foto" class="slider__foto"/>
+        <img 
+        srcset="
+            ../src/images/сustomer-reviews/customer3.png    1x,
+            ../src/images/сustomer-reviews/customer3@2x.png 2x"
+          src="../src/images/сustomer-reviews/customer3.png" alt="customer foto" class="slider__foto"/>
         <p class="slider__description">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
