--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -24,12 +24,28 @@
   width: 85px;
   height: 85px;
   margin-bottom: 29px;
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 19px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 15px;
+  }
 }
 
 .slider__thumb {
   background-color: #fafafa;
   padding: 43px 61px 22px 61px;
   margin-bottom: 52px;
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 42px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 34px;
+  }
 }
 
 .slider__description {
@@ -75,11 +91,99 @@
   );
 
   @include text(500, 12px, 2.55, 0, var(--main-text-color));
+
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
+    background-image: -webkit-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 34px,
+      #e1e1e1 34px,
+      #e1e1e1 35px
+    );
+    background-image: -moz-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 34px,
+      #e1e1e1 34px,
+      #e1e1e1 35px
+    );
+    background-image: -ms-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 34px,
+      #e1e1e1 34px,
+      #e1e1e1 35px
+    );
+    background-image: -o-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 34px,
+      #e1e1e1 34px,
+      #e1e1e1 35px
+    );
+    background-image: repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 34px,
+      #e1e1e1 34px,
+      #e1e1e1 35px
+    );
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    padding-bottom: 5px;
+    background-position: -1px;
+    background-image: -webkit-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 37px,
+      #e1e1e1 37px,
+      #e1e1e1 38px
+    );
+    background-image: -moz-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 37px,
+      #e1e1e1 37px,
+      #e1e1e1 38px
+    );
+    background-image: -ms-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 37x,
+      #e1e1e1 37px,
+      #e1e1e1 38px
+    );
+    background-image: -o-repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 37px,
+      #e1e1e1 37px,
+      #e1e1e1 38px
+    );
+    background-image: repeating-linear-gradient(
+      top,
+      transparent 0px,
+      transparent 37px,
+      #e1e1e1 37px,
+      #e1e1e1 38px
+    );
+  }
 }
 
 .slider__name {
   @include text(500, 14px, 1.86, 0, var(--main-text-color));
   position: relative;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 16px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 20px;
+  }
 
   &::before {
     content: '';
