--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -5,10 +5,10 @@
       <div class="slider__item">
         <img
           srcset="
-            ../src/images/сustomer-reviews/customer1.png    1x,
-            ../src/images/сustomer-reviews/customer1@2x.png 2x
+            ./images/сustomer-reviews/customer1.png    1x,
+            ./images/сustomer-reviews/customer1@2x.png 2x
           "
-          src="../src/images/сustomer-reviews/customer1.png"
+          src="./images/сustomer-reviews/customer1.png"
           alt="customer foto"
           class="slider__foto"
         />
@@ -24,9 +24,9 @@
       <!-- <div class="slider__item">
         <img 
         srcset="
-            ../src/images/сustomer-reviews/customer2.png    1x,
-            ../src/images/сustomer-reviews/customer2@2x.png 2x"
-        src="../src/images/сustomer-reviews/customer2.png" alt="customer foto" class="slider__foto"/>
+            ./images/сustomer-reviews/customer2.png    1x,
+            ./images/сustomer-reviews/customer2@2x.png 2x"
+        src="./images/сustomer-reviews/customer2.png" alt="customer foto" class="slider__foto"/>
         <p class="slider__description">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
@@ -37,8 +37,8 @@
       <div class="slider__item">
         <img 
         srcset="
-            ../src/images/сustomer-reviews/customer3.png    1x,
-            ../src/images/сustomer-reviews/customer3@2x.png 2x"
+            ./images/сustomer-reviews/customer3.png    1x,
+            ./images/сustomer-reviews/customer3@2x.png 2x"
           src="../src/images/сustomer-reviews/customer3.png" alt="customer foto" class="slider__foto"/>
         <p class="slider__description">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
