--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,51 +1,67 @@
 <section class="section reviews">
   <div class="container reviews__container">
     <h2 class="section__title section__title--is-hidden">Customer Reviews</h2>
-    <div class="slider">
-      <div class="slider__item">
-        <img
-          srcset="
-            ./images/сustomer-reviews/customer1.png    1x,
-            ./images/сustomer-reviews/customer1@2x.png 2x
-          "
-          src="./images/сustomer-reviews/customer1.png"
-          alt="customer foto"
-          class="slider__foto"
-        />
-        <div class="slider__thumb">
-          <p class="slider__description">
-            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
-            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-          </p>
+    <div class="slider swiper">
+      <div class="slider__wrapper swiper-wrapper">
+        <div class="slider__slide swiper-slide">
+          <img
+            srcset="
+              ./images/сustomer-reviews/customer1.png    1x,
+              ./images/сustomer-reviews/customer1@2x.png 2x
+            "
+            src="./images/сustomer-reviews/customer1.png"
+            alt="customer foto"
+            class="slider__foto"
+          />
+          <div class="slider__thumb">
+            <p class="slider__description">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+          </div>
+          <p class="slider__name">Emily, Los Angeles</p>
         </div>
-        <p class="slider__name">Emily, Los Angeles</p>
+
+        <div class="swiper-slide">
+          <img
+            srcset="
+              ./images/сustomer-reviews/customer2.png    1x,
+              ./images/сustomer-reviews/customer2@2x.png 2x
+            "
+            src="./images/сustomer-reviews/customer2.png"
+            alt="customer foto"
+            class="slider__foto"
+          />
+          <div class="slider__thumb">
+            <p class="slider__description">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+          </div>
+          <p class="slider__name">Emily, Los Angeles</p>
+        </div>
+
+        <div class="swiper-slide">
+          <img
+            srcset="
+              ./images/сustomer-reviews/customer3.png    1x,
+              ./images/сustomer-reviews/customer3@2x.png 2x
+            "
+            src="../src/images/сustomer-reviews/customer3.png"
+            alt="customer foto"
+            class="slider__foto"
+          />
+          <div class="slider__thumb">
+            <p class="slider__description">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+          </div>
+          <p class="slider__name">Emily, Los Angeles</p>
+        </div>
       </div>
 
-      <!-- <div class="slider__item">
-        <img 
-        srcset="
-            ./images/сustomer-reviews/customer2.png    1x,
-            ./images/сustomer-reviews/customer2@2x.png 2x"
-        src="./images/сustomer-reviews/customer2.png" alt="customer foto" class="slider__foto"/>
-        <p class="slider__description">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-        </p>
-        <p class="slider__name">Emily, Los Angeles</p>
-      </div>
-
-      <div class="slider__item">
-        <img 
-        srcset="
-            ./images/сustomer-reviews/customer3.png    1x,
-            ./images/сustomer-reviews/customer3@2x.png 2x"
-          src="../src/images/сustomer-reviews/customer3.png" alt="customer foto" class="slider__foto"/>
-        <p class="slider__description">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-        </p>
-        <p class="slider__name">Emily, Los Angeles</p>
-      </div> -->
+      <div class="swiper-pagination"></div>
     </div>
   </div>
 </section>
