--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -1,11 +1,19 @@
+.reviews__container {
+  min-width: 0;
+}
 .slider {
   text-align: center;
 }
 
-.slider__item {
+.swiper {
+  // width: 926px;
+  height: 350px;
+}
+
+.slider__slide {
   position: relative;
-  max-width: 900px;
-  margin: 0 auto;
+  // max-width: 900px;
+  // margin: 0 auto;
 
   &::before {
     content: '';
@@ -21,8 +29,9 @@
 
 .slider__foto {
   margin: 0 auto;
-  width: 85px;
-  height: 85px;
+  max-width: 100%;
+  // width: 85px;
+  // height: 85px;
   margin-bottom: 29px;
 
   @media screen and (min-width: $tablet) {
