--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
-<section class="hero sectoin">
+<section class="hero section">
   <div class="hero__block container">
-    <h1 class="hero__titel">
+    <h1 class="section__title">
       <span class="hero___titel--white"
         >ice cream <br />
         made with</span
@@ -13,7 +13,7 @@
     </div>
     <img
       class="hero__ice-cream"
-      src="./images/Hero/hero-icecream-mobile.png"
+      src="../images/Hero/hero-icecream-mobile.png"
       alt="icon ice-cream"
     />
     <img
