--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,7 +13,7 @@
     </div>
     <img
       class="hero__ice-cream"
-      src="../images/Hero/hero-icecream-mobile.png"
+      src="./images/Hero/hero-icecream-mobile.png"
       alt="icon ice-cream"
     />
     <img
