--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,14 +1,13 @@
-<section class="section">
-    <div class="gallery">
- <picture>
-    <source srcset="./images/Gallery/gallery-desktop.jpg 1x, ./images/Gallery/gallery-desktop@2.jpg 2x" type="image/jpeg"
-    media="(min-width: 1280px)" />
-    <source srcset="./images/Gallery/gallery-tablet.jpg 1x, ./images/Gallery/gallery-tablet@2x.gpg 2x" type="image/jpeg"
-    media="(min-width: 768px)" />
+<section class="section section__gallery">
+    <div class="container">
+<picture class="gallery">
+    <source srcset="./images/Gallery/gallery-desktop.jpg 1x, ./images/Gallery/gallery-desktop@2x.jpg 2x"
+        type="image/jpeg" media="(min-width: 1280px)" />
+    <source srcset="./images/Gallery/gallery-tablet.jpg 1x, ./images/Gallery/gallery-tablet@2x.jpg 2x" type="image/jpeg"
+        media="(min-width: 768px)" />
     <source srcset="./images/Gallery/gallery-mobile.jpg 1x, ./images/Gallery/gallery-mobile@2x.jpg 2x" type="image/jpeg"
-    media="(min-width: 480px)" />
-    
+        media="(min-width: 480px)" />
+
     <img class="gallery__img" src="./images/Gallery/gallery-mobile.jpg" alt="разные виды мороженого" />
-</picture>
-</div>
+    </div>
 </section>
