--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,64 +12,124 @@
 <!-- хедер должен быть составной частью секции hero-header,
 в связи с этим у таблетной и десктопной версии ==background-color: transparent==
 для того чтобы было видно фоновое изображение от hero  -->
-<header class="header">
-  <div class="header__container">
-    <span class="logo">
-      <img
-        class="logo__image"
-        srcset="./images/Header/ice-cream/logo.png 1x, ./images/Header/ice-cream/logo@2x.png 2x"
-        src="./images/Header/ice-cream/logo.png"
-        alt="ice cream cone"
-      />
-      icecream
-    </span>
 
-    <button type="button" class="mobile-menu__switch">
-      <svg
-        class="mobile-menu__svg"
-        width="20"
-        height="14"
-        aria-label="Переключатель мобильного меню"
+
+<div class="hero">
+  <div class="container">
+    
+    
+    
+    <header class="header">
+      <div    class="header__container">
+
+      <!-- =========лого========== -->
+      <span class="logo">
+        <img
+              class="logo__image"
+              srcset="./images/Header/ice-cream/logo.png      1x, 
+                      ./images/Header/ice-cream/logo@2x.png   2x"
+                 src="./images/Header/ice-cream/logo.png"
+              alt="ice cream cone"
+          />
+        icecream
+      </span>
+
+     
+
+      <!-- кнопка перключатель мобильного меню -->
+      <button type="button" 
+              class="mobile-menu__switch mobile-menu__switch--open "
+              data-modal-open
       >
-        <!-- <use class="mobile-menu__icon-cross" 
-           href="./images/symbol-defs.svg#icon-close"
-        ></use> -->
-        <use class="mobile-menu__icon-burger" href="./images/symbol-defs.svg#icon-burger"></use>
-      </svg>
-    </button>
+        <svg
+          class="mobile-menu__svg"
+          width="32"
+          height="32"
+          aria-label="Переключатель мобильного меню"
+        >
+        <use class="mobile-menu__icon-burger" 
+             href="./images/symbol-defs.svg#icon-burger"
+        >
+        </use>
+          
+        </svg>
+      </button>
+      <!-- кнопка перключатель мобильного меню end -->
 
-    <!-- <button type="button" class="button button--white">
-      <span class="button__buy">Buy now </span>
-    </button> -->
-  </div>
-</header>
+        <!-- ===кнопка купить для хедера=== -->
+        <button type="button" 
+                class="button button--white header__button">
+          <span class="button__buy">Buy now </span>
+        </button>
+        <!-- кнопка купить для хедера end -->
 
-<div class="mobile-menu" id="menu-container">
-  <div class="mobile-menu__box">
-    <button type="button" class="button button--white mobile-menu__button">
-      <span class="button__buy">Buy now </span>
-    </button>
-    <!-- ====навигация сайта =========== -->
-    <nav class="site-nav">
-      <ul class="site-nav__list">
-        <li class="site-nav__item">
-          <a href="#" class="site-nav__link site-nav__link--current">Home </a>
-        </li>
-        <li class="site-nav__item">
-          <a href="#" class="site-nav__link">About us </a>
-        </li>
-        <li class="site-nav__item">
-          <a href="#" class="site-nav__link">How it’s made? </a>
-        </li>
-        <li class="site-nav__item">
-          <a href="#" class="site-nav__link">Our products </a>
-        </li>
-        <li class="site-nav__item">
-          <a href="#" class="site-nav__link">Contact </a>
-        </li>
-      </ul>
-    </nav>
-    <!-- ..... ====навигация сайта end======= ... -->
+       <div class="backdrop backdrop--is-hidden"
+           data-modal>
+     
+         
+        <div class="mobile-menu " >
+         <div class="mobile-menu__box">
+
+          <button type="button" 
+                  class="mobile-menu__switch mobile-menu__switch--close "
+                  data-modal-close
+          >
+            <svg
+                class="mobile-menu__svg"
+                width="34"
+                height="34"
+                aria-label="Переключатель мобильного меню"
+              >
+              <use  class="mobile-menu__icon-cross" 
+                    href="./images/symbol-defs.svg#icon-close"
+              ></use>
+
+            </svg>
+          </button>
+          <!-- кнопка модального окна buy-now -->
+          <button type="button"
+                  class="button button--white mobile-menu__button">
+            <span class="button__buy">Buy now </span>
+          </button>
+       <!-- кнопка модального окна buy-now end-->   
+
+                  <!-- ====навигация сайта =========== -->
+                  <!-- якоря расставлены на заголовки соответствующих 
+                  секций, даже если они скрыты -->
+          <nav class="site-nav">
+
+            <ul   class="site-nav__list">
+              <li class="site-nav__item">
+                <a href="#" 
+                  class="site-nav__link ">Home </a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#about-us" 
+                  class="site-nav__link">About us </a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#how-it-made" 
+                  class="site-nav__link">How it’s made? </a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#our-products" 
+                  class="site-nav__link">Our products </a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#contact" 
+                  class="site-nav__link">Contact </a>
+              </li>
+            </ul>
+          </nav>
+          <!-- ..... ====навигация сайта end======= ... -->
+        </div>
+        </div>
+
+            <!-- ======================================= -->
+      </div>
+      </div>
+    </header>
   </div>
 </div>
-<!-- ======================================= -->
+<!-- ====================== -->
+
